se agregan endpoints activar/desactivar